<resources>
    <string name="app_name">ChatRoom</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="chat_room">Chat Room</string>
    <string name="active_users">Active users</string>
    <string name="no_one_is_online">No one is Online.</string>
    <string name="no_new_messages">No new messages</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_a_message">Type a message.</string>
</resources>